@@ -15,6 +15,10 @@ module Psych
       end
     end
 
+    def test_no_doublequotes_with_special_characters
+      assert_equal 2, Psych.dump(%Q{<%= ENV["PATH"] %>}).count('"')
+    end
+
     def test_doublequotes_when_there_is_a_single
       yaml = Psych.dump "@123'abc"
       assert_match(/---\s*"/, yaml)
